--- a/diplom-app/html/index.html
+++ b/diplom-app/html/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h2 style="margin-top: 150px; text-align: center;">Diploma of Alexander Gavazin</h2>
+    <h2 style="margin-top: 150px; text-align: center;">Diploma of Alexander Gavazin!</h2>
 </body>
 
 </html>
